fixes subheaders jumping up and covering nav in narrow viewport

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -49,6 +49,9 @@ nav {
   align-items: center;
 }
 
+.centercontent {
+  padding-top: 10rem;
+}
 
 .homeheader {
   display: block;
@@ -62,6 +65,7 @@ nav {
   background-color: rgb(120, 119, 70);
   padding-top: 1rem;
   padding-bottom: 1rem;
+
 }
 
 body {
@@ -70,6 +74,7 @@ body {
   margin: 0;
   top: -8rem;
   left: 0;
+  padding-top: 3rem;
 }
 
 img.col-lg-4 {
@@ -222,23 +227,27 @@ div.contact {
 }
 
 /*-----------------------------Class page specific code----------------------------*/
-
+.classescontainer {
+  padding-top: 11rem;
+  text-align: center;
+}
 .classes .row {
   padding: 0;
 }
 
 h2.classes {
   background-color: rgb(120, 119, 70);
-  color: rgb(64, 65, 30);
+  color: rgb(216, 202, 168);
   padding: 1rem;
   text-decoration: none;
-  font-size: 5rem;
+  font-size: 3rem;
 }
 
 .names {
   background-color: rgb(120, 119, 70);
   color: rgb(64, 65, 30);
   text-decoration: underline;
+  padding-bottom: 1rem;
 }
 
 .classes {
@@ -257,6 +266,7 @@ h2.classes {
 .descriptions {
   background-color: rgb(120, 119, 70);
   color: rgb(64, 65, 30);
+  padding-top: 2rem;
 }
 
 .schedule {
